<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OptionsFragment">

    <TextView
        android:id="@+id/musicVolumeLabel"
        style="@style/NormalText"
        android:text="@string/music_volume"
        android:layout_marginTop="64dp"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <SeekBar
        android:id="@+id/musicVolumeSeekBar"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintTop_toBottomOf="@id/musicVolumeLabel"
        app:layout_constraintStart_toStartOf="@id/musicVolumeLabel"/>

    <TextView
        android:id="@+id/guiVolumeLabel"
        style="@style/NormalText"
        android:text="@string/gui_volume"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/musicVolumeSeekBar"
        app:layout_constraintStart_toStartOf="@id/musicVolumeSeekBar"/>

    <SeekBar
        android:id="@+id/guiVolumeSeekBar"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintTop_toBottomOf="@id/guiVolumeLabel"
        app:layout_constraintStart_toStartOf="@id/guiVolumeLabel"/>

    <TextView
        android:id="@+id/effectVolumeLabel"
        style="@style/NormalText"
        android:text="@string/effects_volume"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/guiVolumeSeekBar"
        app:layout_constraintStart_toStartOf="@id/guiVolumeSeekBar"/>

    <SeekBar
        android:id="@+id/effectVolumeSeekBar"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintTop_toBottomOf="@id/effectVolumeLabel"
        app:layout_constraintStart_toStartOf="@id/effectVolumeLabel"/>

    <TextView
        android:id="@+id/setDefault"
        style="@style/NormalButton"
        android:text="@string/set_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/effectVolumeSeekBar"
        app:layout_constraintStart_toStartOf="@id/effectVolumeSeekBar" />

    <TextView
        android:id="@+id/removeSavedGame"
        style="@style/NormalButton"
        android:text="@string/delete_saved_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/setDefault"
        app:layout_constraintStart_toEndOf="@id/setDefault" />

    <TextView
        android:id="@+id/version"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/lightBlue"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
